2012-10-10 Wed  Jari Aalto  <jari.aalto@cante.net>

	* bin/template/install.lst.ex: Add mkdir example.

	* bin/cygbuild.sh (CygbuildCmdConfMain): Adjust message.
	(CygbuildCmdInstallList): Add mkdir support.
	(CygbuildConfCC): rm config.cache

	* bin/template/test.sh.ex: (Run): Accept empty message.

2012-10-09 Tue  Jari Aalto  <jari.aalto@cante.net>

	* bin/template/mime.ex: New.

	* bin/cygbuild.sh (CygbuildInstallExtraMimeFiles): New.
	(CygbuildDefineGlobalMain): Add FILE_INSTALL_MIME, rename
	FILE_INSTALL_LST.

2012-10-08 Mon  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildDllToLibName): Correct libmagic1.
	(CygbuildConfCC): Make $conf file executable.

2012-10-07 Sun  Jari Aalto  <jari.aalto@cante.net>

	* bin/lib/libcheck.sh (CygbuildCmdInstallCheckManualPages): find
	also symlinked manual pages.

	* bin/cygbuild.sh (CygbuildDllToLibName): Add gnome libs.
	(CygbuildInstallFixManSymlinks): New.

2012-10-04 Thu  Jari Aalto  <jari.aalto@cante.net>

	* TODO: Minor udpates.

	* README: Minor adjustments.

	* INSTALL: Add install-symlinks choice.

	* Makefile (doc): Add docstring.

	* bin/cygbuild.sh (CygbuildMakeRunInstallFixPerlPostinstall): Mot used.
	(CygbuildMakeRunInstallFixPerlMain): Do not use
	CygbuildMakeRunInstallFixPerlPostinstall(). perllocal.pod handling no
	longer needed.

2012-10-03 Wed  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildPatchApplyMaybe): in mode unpatch, do
	not immediately return if patch file is empty but check also quilt.
	(CygbuildDllToLibName): Add cases for libpng15 and libX11.
	(CygbuildCmdGPGVerifyMain): Do not fail on missing GPG key.
	(CygbuildPathBinFast): Move /usr/sbin test later.
	(CygbuildTarOptionCompress): Correct lzma case.
	(CygbuildStrToRegexpSafe): Return value in quotes.
	(CygbuildMatchPatternRemoveWord): Add function arg comments.
	(CygbuildIsEmpty): Add fast empty check.
	(CygbuildIsCygwin): Faster Cygwin arch test.
	(CygbuildIsSourceProgram): require -N, not just N.